# aprovafacil-backend

./: .env.example  .gitignore  index.py  main.py  pyproject.toml  requirements.txt
api/: index.py
app/: config.py  database.py  security.py
app/models/: __init__.py  order.py  payment.py  product.py  user.py
app/routers/: __init__.py  admin.py  auth.py  orders.py  payment.py  products.py
app/schemas/: __init__.py  order.py  payment.py  product.py  user.py
controllers/: __init__.py  health_controller.py  payment_controller.py
core/: config.py  database.py  security.py
models/: __init__.py  payment.py  transaction.py
repositories/: __init__.py  base_repository.py  payment_repository.py  transaction_repository.py
schemas/: __init__.py  payment.py
services/: __init__.py  mercadopago_service.py  payment_service.py
src/controllers/: __init__.py  health_controller.py  payment_controller.py
src/core/: config.py  database.py  security.py
src/models/: __init__.py  payment.py  transaction.py
src/repositories/: __init__.py  base_repository.py  payment_repository.py  transaction_repository.py
src/schemas/: __init__.py  payment.py
src/services/: __init__.py  mercadopago_service.py  payment_service.py
tests/: conftest.py
